tests/machine/x/go/typed_let.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/typed_let.go:10:14: cannot use nil as int value in variable declaration

1: //go:build ignore
