tests/machine/x/go/typed_let.go
//go:build ignore

package main

import (
	"fmt"
)

func main() {
	var y int
	fmt.Println(y)
}
